# boxup

./: .gitignore  PRD.md  README.md  RFC.md  install.sh  pyproject.toml
boxup/: __init__.py  __main__.py  backup.py  cli.py  state.py  system.py
boxup/configs/: fastfetch.jsonc.template  p10k.zsh.template  tmux.conf.template  zshrc.template
boxup/configs/opencode/: AGENTS.md.template  opencode.json.template
boxup/modules/: apps.py  base.py  brew.py  fastfetch.py  nvm.py  tmux.py  uninstall.py  zsh.py
boxup/utils/: colors.py  logger.py
tests/: conftest.py  test_backup.py  test_state.py  test_system.py
tests/test_modules/: test_tmux.py  test_zsh.py
